# charengine

./: .gitignore  Cargo.toml  index.html
charmath/: Cargo.toml
charmath/src/: lib.rs  numeric.rs
charmath/src/linear/: matrix.rs  quaternion.rs  vector.rs
charrender/: Cargo.toml
charwin/: Cargo.toml
charwin/src/: data.rs  input.rs  lib.rs  platform.rs  state.rs  window.rs
charwin/src/data/: buffers.rs  c3d.rs  shaders.rs
charwin/src/data/c3d/: opengl_data.rs  webgl_data.rs
charwin/src/window/: opengl_window.rs  webgl_window.rs
src/: lib.rs  world.rs
