[package]
name = "charengine"
version = "0.1.1"
edition = "2018"
authors=["Callum Mackenzie Alexxander1611@gmail.com"]
license="MIT"

[lib]
name = "charengine"
crate-type = ["cdylib", "rlib"]

[dependencies]
charmath = { path = "./charmath" }
charwin = { path = "./charwin" }
image = "0.23.14"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
