[package]
name = "charwin"
version = "0.1.1"
edition = "2021"
authors=["Callum Mackenzie Alexxander1611@gmail.com"]
license="MIT"

[lib]
name = "charwin"
crate-type = ["cdylib", "rlib"]

[dependencies]
charmath = { path = "../charmath" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.55"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
glfw = "0.42.0"
gl = "0.14.0"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'Window',
  'EventListener',
  'Event',
  'KeyboardEvent',
  'MouseEvent',
  'FocusEvent',
  'WheelEvent',
  'DomRect',
]
